<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecyclerView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="listview">ListView</string>
    <string name="gridview">GridView</string>
    <string name="horizontal_gridview">Horizontal Gridview</string>
    <string name="staggered">Staggered</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

</resources>
