<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.owen.recycleview.MainActivity" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/add"/>
    
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete" />
    
    <item
        android:id="@+id/action_listview"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/listview"/>
    
    <item
        android:id="@+id/action_gridview"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/gridview"/>
    
    <item
        android:id="@+id/action_horizontal_gridview"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/horizontal_gridview" />
    
    <item
        android:id="@+id/action_staggered"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/staggered"/>
    
</menu>
